0.9.0/_sources/gallery/interactive_scripting.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/interactive_scripting.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_interactive_scripting.py:


Interactive scripting
=====================

.. tags:: interactivity

.. GENERATED FROM PYTHON SOURCE LINES 7-34



.. image-sg:: /gallery/images/sphx_glr_interactive_scripting_001.png
   :alt: interactive scripting
   :srcset: /gallery/images/sphx_glr_interactive_scripting_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import time

    import numpy as np

    import napari
    from napari.qt import thread_worker

    # create the viewer with an image
    data = np.random.random((512, 512))
    viewer = napari.Viewer()
    layer = viewer.add_image(data)

    def update_layer(data):
        layer.data = data

    @thread_worker(connect={'yielded': update_layer})
    def create_data(*, update_period, num_updates):
        # number of times to update
        for _k in range(num_updates):
            yield np.random.random((512, 512))
            time.sleep(update_period)

    create_data(update_period=0.05, num_updates=50)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_interactive_scripting.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: interactive_scripting.ipynb <interactive_scripting.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: interactive_scripting.py <interactive_scripting.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: interactive_scripting.zip <interactive_scripting.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
